Fix shifting content on hover

--- a/apps/show/index.styl
+++ b/apps/show/index.styl
@@ -73,17 +73,7 @@
 #show-left
   position absolute
   text-align left
-  margin-top -2px
-
-#show-back
-  &:hover, &:active
-    border-bottom 0
-  .icon-chevron-left
-    font-size 16px
-    font-weight bold
-    margin-right 5px
-    position relative
-    top 2px
+  margin-top 10px
 
 #show-left-info
   margin-top 20px
